Pushing updated styles

--- a/app/scss/_content.scss
+++ b/app/scss/_content.scss
@@ -2,8 +2,8 @@
   &__item {
     margin: 0 auto;
     width: 80%;
-    min-height: 34rem;
-    padding: 4rem 5.75rem 5rem 5.75rem;
+    // min-height: 34rem;
+    padding: 2rem 5.75rem;
     margin-top: 5rem;
     margin-bottom: 3.5rem;
     box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.55),
