--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -10,7 +10,7 @@
     font-weight: 400;
     font-size: 2rem;
     color: $white;
-    font-family: "UnifrakturMaguntia", cursive;
+    font-family: $old-english;
     letter-spacing: 0.25rem;
     transition: font-size 150ms ease-in-out;
       
