--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -9,6 +9,10 @@ $charcoal: #333333;
 $blueCharcoal: #36454f;
 $Slate: darkslategray;
 
+// Fonts
+$old-english: 'UnifrakturMaguntia', cursive;
+$poppins: 'Poppins', sans-serif;
+
 // Font Sizes
 $font-sm: 0.875rem; // 14px
 $font-med: 1.125rem; // 18px
