--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -1,16 +1,19 @@
 .footer {
-  position: relative;
-  bottom: 0;
-  width: 100%;
   display: flex;
+  flex-shrink: 0;
   align-items: center;
+  position: relative;
+
+  // bottom: 0;
+  // width: 100%;
+  // min-height: 3rem;
   background-color: $blueCharcoal;
   color: white;
-  min-height: 3rem;
 }
 
 .social {
   display: flex;
+  margin-top: .5rem;
   justify-content: center;
   padding-left: 1.2rem;
 
