--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -1,21 +1,35 @@
+html, body {
+  height: 100%;
+}
+
 html {
-  font-size: 100%;
+  font-size: 1.05rem;
   box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
-}
-
+    box-sizing: inherit;
+  }
+  
 body {
+  display: flex;
+  flex-direction: column;
   background-color: $lightGrey;
   margin: 0;
   padding: 0;
   text-align: center;
-  min-height: 100vh;
   font-family: "Open Sans";
+}
+
+.container {
+  max-width: 68rem;
+  margin: 0 auto;
+}
+
+.content {
+  flex: 1 0 auto;
 }
 
 h1,
@@ -25,7 +39,7 @@ h3 {
 }
 
 h3 {
-  font-size: 0.94rem;
+  font-size: 1.1rem;
 }
 
 hr {
@@ -46,18 +60,12 @@ a:hover {
   text-decoration: none;
 }
 
-.container {
-  max-width: 68rem;
-  margin: 1.75rem 0 1.05rem 0;
-  // border: 1px solid red;
-}
-
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
+// .center {
+//   display: block;
+//   margin-left: auto;
+//   margin-right: auto;
+//   width: 50%;
+// }
 
 .border {
   border: 1px solid red;
