--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -1,4 +1,6 @@
 // Colors
+$dbLtPurple: #e9c8ff;
+$dbDkPurple: #ca97ed;
 $darkTeal: rgba(0, 128, 128, 0.2);
 $lightTeal: rgba(112, 128, 144, 0.2);
 $reallyDarkTeal: rgba(0, 128, 128, 0.6);
@@ -8,6 +10,8 @@ $lightPink: lightpink;
 $charcoal: #333333;
 $blueCharcoal: #36454f;
 $Slate: darkslategray;
+$slideshowGrey: #717171;
+$slideshowBg: #BBB;
 
 // Fonts
 $old-english: 'UnifrakturMaguntia', cursive;
@@ -21,6 +25,7 @@ $font-xlg: 1.5rem; // 24px
 
 // Contact Form Colors
 $lightGrey: #ececec;
+$lightishGrey: #e4e4e4;
 $midGrey: #606060;
 $grey: #ababab;
 $darkGrey: #202035;
