--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -4,26 +4,24 @@
   align-items: center;
   position: relative;
 
-  // bottom: 0;
-  // width: 100%;
-  // min-height: 3rem;
-  background-color: $blueCharcoal;
+  bottom: 0;
+  width: 100%;
+  min-height: 3rem;
+  background-color: $lightishGrey;
   color: white;
 }
 
 .social {
-  display: flex;
   margin-top: .5rem;
-  justify-content: center;
   padding-left: 1.2rem;
-
+  
   img {
     width: 1.55rem;
   }
 }
 
-img,
-svg {
+.footer-img,
+svg { 
   margin-right: 0.95rem;
   transition: transform 250ms ease-in-out;
 
