--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,15 +1,18 @@
-.header {
-  display: flex;
-  background-color: $blueCharcoal;
+.header { 
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+  top: 0;
   height: 5rem;
+  background-color: $lightishGrey;
 
   &__text {
     order: 1;
     flex: 1;
-    margin-left: 0;
+    margin-left: 2rem;
     font-weight: 400;
     font-size: 2rem;
-    color: $white;
+    color: $blueCharcoal;
     font-family: $old-english;
     letter-spacing: 0.25rem;
     transition: font-size 150ms ease-in-out;
@@ -40,9 +43,10 @@
     order: 3;
     flex: 1;
     font-size: 1.08rem;
+    margin-right: 1.25rem;
 
     a {
-      color: $white;
+      color: $blueCharcoal;
       transition: font-size 175ms ease-in-out;
 
       &:not(:last-child) {
@@ -50,21 +54,25 @@
       }
 
       &:hover {
-        color: $lightPink;
-        border-bottom: $lightPink;
+        color: $dbDkPurple;
+        border-bottom: $dbDkPurple;
         font-size: 1.15rem;
       }
     }
   }
 }
 
+// .sticky {
+//   position: fixed;
+//   width: 100%;
+//   top: 0;
+// }
+
 h3.intro {
-  padding: 4rem;
-  width: 50rem;
+  padding: 2.5rem;
   margin: 0 auto;
 }
 
 .flex-child {
-  //   border: 1px solid red;
   max-width: 18rem;
 }
