--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -1,6 +1,6 @@
 // Colors
 $dbLtPurple: #e9c8ff;
-$dbDkPurple: #ca97ed;
+$dbDkPurple: #bb80e2;
 $darkTeal: rgba(0, 128, 128, 0.2);
 $lightTeal: rgba(112, 128, 144, 0.2);
 $reallyDarkTeal: rgba(0, 128, 128, 0.6);
