--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -3,19 +3,19 @@
   z-index: 2;
   width: 100%;
   top: 0;
-  height: 5rem;
+  height: 6rem;
   background-color: $lightishGrey;
 
   &__text {
     order: 1;
     flex: 1;
-    margin-left: 2rem;
-    font-weight: 400;
+    margin: 0.17rem 0 0 2rem;
+    font-weight: bold;
     font-size: 2rem;
     color: $blueCharcoal;
     font-family: $old-english;
     letter-spacing: 0.25rem;
-    transition: font-size 150ms ease-in-out;
+    transition: font-size 300ms ease-in-out;
       
       &:hover {
         font-size: 2.1rem;
@@ -28,14 +28,13 @@
 
   &__img {
     padding: 0.95rem 0.75rem 0.75rem 0.75rem;
-    max-width: 5.15rem;
-    max-height: 5.15rem;
+    width: 5.75rem;
     border-radius: 6.25rem;
-    transition: transform 200ms ease-in-out;
+    transition: transform 300ms ease-in-out;
     cursor: pointer;
 
     &:hover {
-      transform: scale(1.15);
+      transform: scale(1.1);
     }
   }
 
@@ -62,14 +61,8 @@
   }
 }
 
-// .sticky {
-//   position: fixed;
-//   width: 100%;
-//   top: 0;
-// }
-
 h3.intro {
-  padding: 2.5rem;
+  padding: 1.8rem;
   margin: 0 auto;
 }
 
