--- a/app/scss/_slideshow.scss
+++ b/app/scss/_slideshow.scss
@@ -5,12 +5,12 @@
 /* Slideshow container */
 .slideshow-container {
   flex-wrap: wrap;
-  margin: 2.25rem 0 0 4rem;
+  margin: 0.7rem 0 0 4rem;
   z-index: 1;
 }
 
 .slideshow-imgs {
-  max-width: 60rem;
+  width: 33rem;
   position: relative;
 }
 
