--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $dbLtPurple: #e9c8ff;
 $dbDkPurple: #bb80e2;
+$reallyDkPurple: #66318a;
 $darkTeal: rgba(0, 128, 128, 0.2);
 $lightTeal: rgba(112, 128, 144, 0.2);
 $reallyDarkTeal: rgba(0, 128, 128, 0.6);
@@ -9,7 +10,7 @@ $white: #ffffff;
 $lightPink: lightpink;
 $charcoal: #333333;
 $blueCharcoal: #36454f;
-$Slate: darkslategray;
+$slate: #3d3d3d;
 $slideshowGrey: #717171;
 $slideshowBg: #BBB;
 
