--- a/app/scss/styles.css
+++ b/app/scss/styles.css
@@ -44,7 +44,7 @@ body {
 h1,
 h2,
 h3 {
-  color: #606060;
+  color: #ababab;
 }
 
 hr {
@@ -53,7 +53,7 @@ hr {
 }
 
 p {
-  color: #606060;
+  color: #ababab;
   line-height: 1.5;
   padding: 0.5rem 1rem;
 }
@@ -132,8 +132,8 @@ a:hover {
   z-index: 2;
   width: 100%;
   top: 0;
-  height: 6rem;
-  background-color: #e4e4e4;
+  height: 5rem;
+  background-color: #3d3d3d;
 }
 
 .header__text {
@@ -146,7 +146,7 @@ a:hover {
   margin: 0.17rem 0 0 2rem;
   font-weight: bold;
   font-size: 2rem;
-  color: #36454f;
+  color: #ababab;
   font-family: "UnifrakturMaguntia", cursive;
   letter-spacing: 0.25rem;
   -webkit-transition: font-size 300ms ease-in-out;
@@ -155,6 +155,7 @@ a:hover {
 
 .header__text:hover {
   font-size: 2.1rem;
+  color: #bb80e2;
 }
 
 .header a {
@@ -165,7 +166,7 @@ a:hover {
 
 .header__img {
   padding: 0.95rem 0.75rem 0.75rem 0.75rem;
-  width: 5.75rem;
+  width: 5rem;
   border-radius: 6.25rem;
   -webkit-transition: -webkit-transform 300ms ease-in-out;
   transition: -webkit-transform 300ms ease-in-out;
@@ -191,7 +192,7 @@ a:hover {
 }
 
 .header__nav a {
-  color: #36454f;
+  color: #ececec;
   -webkit-transition: font-size 175ms ease-in-out;
   transition: font-size 175ms ease-in-out;
 }
@@ -215,50 +216,143 @@ h3.intro {
   max-width: 18rem;
 }
 
-html, body {
-  height: 100%;
+.content {
+  background-color: #3d3d3d;
+  color: #ababab;
 }
 
-body {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.content__grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  gap: 1.875rem;
+}
+
+@media (min-width: 63.9375em) {
+  .content__grid {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+.content__about, .content__card {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 87%;
+}
+
+@media (min-width: 87.4375em) {
+  .content__about, .content__card {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
+.content__item {
+  margin: 6rem auto 0 auto;
+}
+
+.content__card {
+  padding: 1rem 2rem 2rem 2rem;
+  -webkit-box-shadow: -7px -7px 11px rgba(89, 89, 89, 0.35), 12px 12px 18px rgba(53, 53, 53, 0.7);
+          box-shadow: -7px -7px 11px rgba(89, 89, 89, 0.35), 12px 12px 18px rgba(53, 53, 53, 0.7);
+  border-radius: 0.75rem;
+  overflow: hidden;
+}
+
+.content__social-icons {
+  margin: 6rem 0 0 0;
+}
+
+.content__social {
+  margin-top: 3rem;
+}
+
+.content__social span.content__social-link {
+  display: inline-block;
+  padding: 3.75rem 2rem 2.5rem 2rem;
+}
+
+.content__social__icon {
+  padding: 0.25rem;
+}
+
+.content__social__link {
+  color: #bb80e2;
+  -webkit-transition: font-size 150ms ease-in-out;
+  transition: font-size 150ms ease-in-out;
+}
+
+.content__social__link:hover {
+  font-size: 1.055rem;
+}
+
+.kb {
+  background-color: #333333;
+  min-height: 35rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-bottom: 2rem;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
 }
 
-.content {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 auto;
-          flex: 1 0 auto;
+@media (min-width: 87.4375em) {
+  .kb {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
+.kb__flex-child {
+  width: 50%;
+  margin: 0 0.5rem;
+}
+
+.kb__builds {
+  font-weight: bold;
+}
+
+.kb__container {
+  text-align: left;
+}
+
+.form-content {
+  background-color: #333333;
+  min-height: 70rem;
 }
 
 .contactform {
   -webkit-box-flex: 1;
       -ms-flex: 1 0 auto;
           flex: 1 0 auto;
-  color: #202035;
+  color: #ababab;
   font-family: "Poppins", sans-serif;
   font-weight: 600;
-  font-size: 0.875rem;
+  font-size: 1rem;
   letter-spacing: 0.075rem;
 }
 
 form {
-  top: 52%;
+  top: 57%;
   left: 50%;
-  max-height: 75%;
-  width: 50%;
+  width: 100%;
   position: absolute;
   border-radius: 0.625rem;
-  overflow: auto;
+  background-color: transparent;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  -webkit-box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.55), 10px 10px 15px rgba(70, 70, 70, 0.12);
-          box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.55), 10px 10px 15px rgba(70, 70, 70, 0.12);
-  padding: 2.5rem 1.25rem;
+  padding: 3rem;
 }
 
 h3 {
@@ -266,8 +360,7 @@ h3 {
 }
 
 h6.contact-header {
-  margin-top: 1.5rem;
-  margin-bottom: 0.625rem;
+  margin: 3.5rem auto 1rem auto;
   font: inherit;
   text-transform: uppercase;
 }
@@ -285,8 +378,8 @@ a.home {
   color: inherit;
   text-decoration: none;
   padding: 0.675rem;
-  -webkit-box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.55), 10px 10px 15px rgba(70, 70, 70, 0.12);
-          box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.55), 10px 10px 15px rgba(70, 70, 70, 0.12);
+  -webkit-box-shadow: -5px -5px 9px rgba(89, 89, 89, 0.35), 9px 9px 15px rgba(38, 38, 38, 0.7);
+          box-shadow: -5px -5px 9px rgba(89, 89, 89, 0.35), 9px 9px 15px rgba(38, 38, 38, 0.7);
 }
 
 a.home {
@@ -302,10 +395,13 @@ a.home {
 }
 
 a.submit {
-  border-radius: 1.875rem;
+  border-radius: 0.85rem;
   width: 80%;
+  color: #e4e4e4;
   margin-top: 1.3rem;
   margin-bottom: 1.75rem;
+  background-image: -webkit-gradient(linear, left top, right top, from(#66318a), to(#bb80e2));
+  background-image: linear-gradient(to right, #66318a, #bb80e2);
 }
 
 input[type="text"],
@@ -313,10 +409,11 @@ input[type="textarea"],
 input[type="email"] {
   margin-bottom: 1.5625rem;
   border: none;
+  color: #ececec;
   background-color: transparent;
-  -webkit-box-shadow: inset -10px -10px 15px rgba(255, 255, 255, 0.55), inset 10px 10px 15px rgba(70, 70, 70, 0.12);
-          box-shadow: inset -10px -10px 15px rgba(255, 255, 255, 0.55), inset 10px 10px 15px rgba(70, 70, 70, 0.12);
-  padding: 0.625rem;
+  -webkit-box-shadow: inset -4px -4px 9px rgba(97, 97, 97, 0.35), 8px 8px 12px rgba(53, 53, 53, 0.7);
+          box-shadow: inset -4px -4px 9px rgba(97, 97, 97, 0.35), 8px 8px 12px rgba(53, 53, 53, 0.7);
+  padding: .75rem 0.625rem;
   width: 90%;
   border-radius: 0.4375rem;
   outline: none;
@@ -332,7 +429,8 @@ input.tqtr-width {
 }
 
 input[type="textarea"] {
-  height: 15%;
+  height: 10rem;
+  width: 84.15%;
 }
 
 ::-webkit-input-placeholder {
@@ -398,9 +496,9 @@ input[type="radio"]:after {
 }
 
 input[type="radio"]:checked,
-a:active {
-  -webkit-box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.55), 10px 10px 15px rgba(70, 70, 70, 0.12), inset -10px -10px 15px rgba(255, 255, 255, 0.55), inset 10px 10px 15px rgba(70, 70, 70, 0.12);
-          box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.55), 10px 10px 15px rgba(70, 70, 70, 0.12), inset -10px -10px 15px rgba(255, 255, 255, 0.55), inset 10px 10px 15px rgba(70, 70, 70, 0.12);
+a.submit:active {
+  -webkit-box-shadow: inset -10px -10px 15px rgba(89, 89, 89, 0.35), inset 10px 10px 15px rgba(53, 53, 53, 0.7);
+          box-shadow: inset -10px -10px 15px rgba(89, 89, 89, 0.35), inset 10px 10px 15px rgba(53, 53, 53, 0.7);
 }
 
 input[type="radio"]:checked:after {
@@ -412,67 +510,6 @@ input[type="radio"]:checked:after {
       flex-shrink: 0;
 }
 
-.content__about {
-  margin: 6rem auto auto auto;
-}
-
-.content__about, .content__card {
-  width: 87%;
-  height: 36rem;
-}
-
-.content__item {
-  margin: 5rem auto 6.5rem auto;
-}
-
-.content__card {
-  padding: 1rem 2rem 2rem 2rem;
-  -webkit-box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.55), 10px 10px 15px rgba(70, 70, 70, 0.12);
-          box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.55), 10px 10px 15px rgba(70, 70, 70, 0.12);
-  border-radius: 0.75rem;
-  overflow: hidden;
-}
-
-.content__social-icons {
-  margin: 6rem 0 0 0;
-}
-
-.content__social {
-  margin-top: 3rem;
-}
-
-.content__social span.content__social-link {
-  display: inline-block;
-  padding: 3.75rem 2rem 2.5rem 2rem;
-}
-
-.content__social__icon {
-  padding: 0.25rem;
-}
-
-.content__social__link {
-  color: #bb80e2;
-  -webkit-transition: font-size 150ms ease-in-out;
-  transition: font-size 150ms ease-in-out;
-}
-
-.content__social__link:hover {
-  font-size: 1.055rem;
-}
-
-.kb__flex-child {
-  width: 50%;
-  margin: 0 0.5rem;
-}
-
-.kb__builds {
-  font-weight: bold;
-}
-
-.kb__container {
-  text-align: left;
-}
-
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -482,12 +519,23 @@ input[type="radio"]:checked:after {
 .slideshow-container {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin: 0.7rem 0 0 4rem;
+  margin: 5rem auto 0 auto;
   z-index: 1;
 }
 
+@media (min-width: 63.9375em) {
+  .slideshow-container {
+    max-width: 43rem;
+  }
+}
+
+@media (min-width: 87.4375em) {
+  .slideshow-container {
+    margin: 0.7rem 0 0 4rem;
+  }
+}
+
 .slideshow-imgs {
-  width: 33rem;
   position: relative;
 }
 
@@ -596,7 +644,7 @@ input[type="radio"]:checked:after {
   bottom: 0;
   width: 100%;
   min-height: 3rem;
-  background-color: #e4e4e4;
+  background-color: #3d3d3d;
   color: white;
 }
 
@@ -611,7 +659,7 @@ input[type="radio"]:checked:after {
 
 .footer-img,
 svg {
-  margin-right: 0.95rem;
+  margin-right: 0.35rem;
   -webkit-transition: -webkit-transform 300ms ease-in-out;
   transition: -webkit-transform 300ms ease-in-out;
   transition: transform 300ms ease-in-out;
