--- a/app/scss/_contact.scss
+++ b/app/scss/_contact.scss
@@ -1,38 +1,40 @@
-html, body {
-    height: 100%;
-}
+// html, body {
+//     height: 100%;
+// }
 
-body {
-    display: flex;
-    flex-direction: column;
-}
+// body {
+//     display: flex;
+//     flex-direction: column;
+// }
 
-.content {
-    flex: 1 0 auto;
+// .content {
+//     flex: 1 0 auto;
+// }
+
+.form-content {
+    background-color: $charcoal;
+    min-height: 70rem;
 }
 
 .contactform {
     flex: 1 0 auto;
-    color: $darkGrey;
+    color: $grey;
     font-family: $poppins;
     font-weight: 600;
-    font-size: 0.875rem;
+    font-size: 1rem;
     letter-spacing: 0.075rem;
 }
 
 form {
-    top: 52%;
+    top: 57%;
     left: 50%;
-    max-height: 75%;
-    width: 50%;
+    width: 100%;
     position: absolute;
     border-radius: 0.625rem;
-    overflow: auto;
+    background-color: transparent;
 
     transform: translate(-50%, -50%);
-    box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.55),
-        10px 10px 15px rgba(70, 70, 70, 0.12);
-    padding: 2.5rem 1.25rem;
+    padding: 3rem;
 }
 
 h3 {
@@ -40,8 +42,7 @@ h3 {
 }
 
 h6.contact-header {
-    margin-top: 1.5rem;
-    margin-bottom: 0.625rem;
+    margin: 3.5rem auto 1rem auto;
     font: inherit;
     text-transform: uppercase;
 }
@@ -59,8 +60,8 @@ a.home {
     color: inherit;
     text-decoration: none;
     padding: 0.675rem;
-    box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.55),
-        10px 10px 15px rgba(70, 70, 70, 0.12);
+    box-shadow: -5px -5px 9px rgba(89, 89, 89, 0.35),
+    9px 9px 15px rgba(38, 38, 38, 0.7);
 }
 
 a.home {
@@ -76,10 +77,12 @@ a.home {
 }
 
 a.submit {
-    border-radius: 1.875rem;
+    border-radius: 0.85rem;
     width: 80%;
+    color: $lightishGrey;
     margin-top: 1.3rem;
     margin-bottom: 1.75rem;
+    background-image: linear-gradient(to right, $reallyDkPurple, $dbDkPurple);
 }
 
 input[type="text"],
@@ -87,10 +90,11 @@ input[type="textarea"],
 input[type="email"] {
     margin-bottom: 1.5625rem;
     border: none;
+    color: $lightGrey;
     background-color: transparent;
-    box-shadow: inset -10px -10px 15px rgba(255, 255, 255, 0.55),
-        inset 10px 10px 15px rgba(70, 70, 70, 0.12);
-    padding: 0.625rem;
+    box-shadow: inset -4px -4px 9px rgba(97, 97, 97, 0.35),
+    8px 8px 12px rgba(53, 53, 53, 0.7);
+    padding: .75rem 0.625rem;
     width: 90%;
     border-radius: 0.4375rem;
     outline: none;
@@ -106,7 +110,8 @@ input.tqtr-width {
 }
 
 input[type="textarea"] {
-    height: 15%;
+    height: 10rem;
+    width: 84.15%;
 }
 
 ::placeholder {
@@ -150,11 +155,9 @@ input[type="radio"]:after {
 }
 
 input[type="radio"]:checked,
-a:active {
-    box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.55),
-        10px 10px 15px rgba(70, 70, 70, 0.12),
-        inset -10px -10px 15px rgba(255, 255, 255, 0.55),
-        inset 10px 10px 15px rgba(70, 70, 70, 0.12);
+a.submit:active {
+    box-shadow: inset -10px -10px 15px rgba(89, 89, 89, 0.35),
+        inset 10px 10px 15px rgba(53, 53, 53, 0.7);
 }
 
 input[type="radio"]:checked:after {
